RESOLVED FIXED203670
[css-grid] Wrong line name positions after auto repeat with no line names
https://bugs.webkit.org/show_bug.cgi?id=203670
Summary [css-grid] Wrong line name positions after auto repeat with no line names
Oriol Brufau
Reported 2019-10-31 02:30:20 PDT
**What steps will reproduce the problem?** Load https://software.hixie.ch/utilities/js/live-dom-viewer/?saved=7256 The page has a grid container with grid-template-rows: repeat(auto-fill, 10px) [foo] 20px [bar]; Then it logs the resolved value. **What is the expected result?** It logs "10px 10px 10px 10px [foo] 20px [bar]" **What happens instead?** It logs "10px [foo] 10px [bar] 10px 10px 20px" Firefox does it right. Chromium has been fixed in https://crbug.com/1011329
Attachments
Patch (37.43 KB, patch)
2019-10-31 03:11 PDT, Oriol Brufau
no flags
Oriol Brufau
Comment 1 2019-10-31 03:11:16 PDT
WebKit Commit Bot
Comment 2 2019-11-02 11:48:22 PDT
Comment on attachment 382443 [details] Patch Clearing flags on attachment: 382443 Committed r251965: <https://trac.webkit.org/changeset/251965>
WebKit Commit Bot
Comment 3 2019-11-02 11:48:24 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-02 11:49:16 PDT
Oriol Brufau
Comment 5 2019-11-22 03:48:09 PST
*** Bug 204504 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.