[css-grid] Fix line name positions after auto repeat with no line names https://bugs.webkit.org/show_bug.cgi?id=203670

Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

Import WPT tests.
There are some test failures because integer repeat() is still expanded
at computed-value time (https://webkit.org/b/202259).

* web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-nogrid-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-nogrid.html:
* web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-withcontent-expected.txt: Added.
* web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-withcontent.html: Added.
* web-platform-tests/css/css-grid/parsing/grid-template-columns-computed.html:
* web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-nogrid-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-nogrid.html:
* web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-withcontent-expected.txt: Added.
* web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-withcontent.html: Added.
* web-platform-tests/css/css-grid/parsing/grid-template-rows-computed.html:
* web-platform-tests/css/css-grid/parsing/w3c-import.log:

Source/WebCore:

When serializing grid-template-rows/columns of a grid container, we need
to handle auto repeat() specially in order to insert the line names at
the correct places.

Before this patch, this was skipped for indices before the insertion
point of the auto repeat, and in case the auto repeat had no line name.
The latter logic was wrong, if there is an auto repeat we still need the
special code after the insertion point, even if it has no line names.
The proper condition to check is whether there is no auto repeat.

The patch also avoids a 2nd call to gridAutoRepeatRows/Columns since we
already have the value in a variable.

Tests: imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-columns-computed.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-nogrid.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-withcontent.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-rows-computed.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-nogrid.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-withcontent.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::OrderedNamedLinesCollectorInGridLayout::OrderedNamedLinesCollectorInGridLayout):
(WebCore::OrderedNamedLinesCollectorInGridLayout::collectLineNamesForIndex const):
(WebCore::valueForGridTrackList):


Canonical link: https://commits.webkit.org/217133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251965 268f45cc-cd09-0410-ab3c-d52691b4dbfc